attempted fixes to low contrast errors

--- a/styles3.css
+++ b/styles3.css
@@ -43,7 +43,7 @@ nav a {
 
 nav a:hover,
 nav a.active {
-  background-color: #2a7ab5;
+  background-color: #13294B;
 }
 
 /* ── MAIN ── */
